--- a/src/Components/Albums/Albums.module.css
+++ b/src/Components/Albums/Albums.module.css
@@ -29,3 +29,12 @@
   border: 2px solid #ff1300;
   color: #ff1300;
 }
+.albums_list {
+  grid-gap: 30px;
+  display: grid;
+  gap: 30px;
+  grid-auto-flow: row;
+  grid-auto-rows: 150px;
+  grid-template: repeat(1, 150px) / repeat(auto-fit, minmax(150px, 0.5fr));
+  margin-bottom: 100px;
+}
